--- a/templates/order/add.html.twig
+++ b/templates/order/add.html.twig
@@ -23,7 +23,7 @@
             <div class = "form-check">
                 {{carrier.name}}<br/>
                 {{carrier.description}}<br/>
-                {{carrier.price| number_format(2, ',',".") }} €<br/>
+                {{(carrier.price /100)| number_format(2, ',',".") }} €<br/>
             </div>
            
         </div>
@@ -54,11 +54,11 @@
             </div>
             <hr>
             <strong>Sous-total : </strong>{{(total /100) | number_format(2, ',',".") }} €<br/>
-            <strong>Livraison : </strong>{{(carrier.price) | number_format(2, ',',".") }} €
+            <strong>Livraison : </strong>{{(carrier.price /100) | number_format(2, ',',".") }} €
             <hr>
-            <strong>Total : </strong>{{(total /100 + carrier.price) | number_format(2, ',',".") }} € <br/>
+            <strong>Total : </strong>{{(total /100 + (carrier.price /100)) | number_format(2, ',',".") }} € <br/>
             
-            <a href="{{ path('stripe_create_session',{'reference':reference}) }}" class="btn btn-success btn-block mt-3" id="checkout-button">Payer | {{ (((total)/100) + carrier.price)|number_format(2,',', '.') }}€</a>
+            <a href="{{ path('stripe_create_session',{'reference':reference}) }}" class="btn btn-success btn-block mt-3" id="checkout-button">Payer | {{ (((total)/100) + (carrier.price /100))|number_format(2,',', '.') }}€</a>
         </div>
     </div>
 
