--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Confirmation de a commande | La Boutique Française {% endblock %}
 
 {% block contents %}
-<h2>Confirmation de commande<h2>
+<h2>Confirmation de commande</h2>
 <p>Bonjour <strong>{{order.user.firstname}} {{order.user.lastname}}</strong>,<br/><br/>
 Nous vous remercions pour votre commande n°<strong>{{order.reference}}</strong>,<br/>
 Une confirmation vient de vous être envoyée par email a l'adresse <strong>{{order.user.email}}</strong>.
