formation symfony terminée

--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -16,7 +16,16 @@
         <a href="{{ path('add-to-cart',{'id': product.id}) }}" class="btn btn-primary">Ajouter au panier</a>
     </div>
 </div>
-
+<hr>
+<h3>Nos meilleures ventes</h3>
+<p>Découvrez les articles les plus vendus.</p>
+    <div class="row">
+            {% for product in products %}
+                <div class="col-md-3">
+                     {% include 'product/single_product.html.twig'%}
+                </div>
+            {% endfor %}
+    </div>
 
 
 {% endblock %}
