--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -8,7 +8,9 @@
         {% if error %}
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
-
+        {% for message in app.flashes('notice') %}
+        <div class= 'alert alert-info'>{{message}}</div>
+        {% endfor %}
         {% if app.user %}
             <div class="mb-3">
                 Vous êtes connecté à :  {{ app.user.getUserIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
@@ -39,6 +41,7 @@
             Connexion
         </button>
         <hr>
+         <p class="text-center"><a href = "{{path('reset_password')}}">Mot de passe oublié ?</a></p>
         <p class="text-center">Ou souhaitez-vous <a href = "{{path('register')}}">Créer un compte</a></p>
         
     </form>
