--- a/public/assets/css/boutiquefrancaise.css
+++ b/public/assets/css/boutiquefrancaise.css
@@ -73,3 +73,27 @@ margin: 0 auto;
     padding: 20px;
     margin-top: 22px;
 }
+.account-item
+{
+    background-color: #c9cfe4;
+    padding: 70px;
+    border-radius: 5px;
+}
+.account-item:hover
+{
+    background-color: #878ca0;
+    padding: 70px;
+    transition: 1s;
+}
+.account-item a 
+{
+    text-transform: uppercase;
+    font-size: 14px;
+    color:#2b2b3b;
+    font-weight: bold;
+
+}
+.account-item img
+{
+    width:30px;
+}
