--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -4,12 +4,31 @@
 
 {% block contents %}
     <h1>Mon compte</h1>
+    {% if is_granted('ROLE_ADMIN') %}
+    <a href ="/admin">Admistrer le site</a><br>     
+    {% endif %}
     Bienvenue {{app.user.firstname}} dans votre compte.
     <hr>
-    <a href ="{{path('account_password')}}">Modifier mon mot de passe</a><br> 
-    <a href ="{{path('account_address')}}">Gérer mes adresses</a><br> 
-    <a href ="">Mes commandes</a><br> 
-    
+    <div class="row">
+        <div class="col-md-4">
+            <div class = "account-item text-center">
+                <img src ="{{asset('assets/img/password.png')}}" alt="Modifier mon mot de passe"><br/>
+                <a href ="{{path('account_password')}}">Modifier mon mot de passe</a><br> 
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class= "account-item text-center">
+                <img src ="{{asset('assets/img/home-address.png')}}" alt="Gérer mes adresses"><br/>
+                <a href ="{{path('account_address')}}">Gérer mes adresses</a><br> 
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class = "account-item text-center">
+                <img src ="{{asset('assets/img/checkout.png')}}" alt="Mes commandes"><br/>
+                <a href ="{{path('account_order')}}">Mes commandes</a><br> 
+            </div>
+        </div>
+    </div>
    
     <hr>
 {% endblock %}
