--- a/templates/order_validate/index.html.twig
+++ b/templates/order_validate/index.html.twig
@@ -11,5 +11,5 @@ Une confirmation vient de vous être envoyée par email a l'adresse <strong>{{or
 Votre commande sera livrée par <strong>{{order.carrierName}}</strong> à l'adresse suivante : <br/>
 {{order.delivery|raw}}
 </p>
-Pour suivre votre commande, rendez-vous dans votre <a href="{{path('app_account')}}" >compte</a>.
+Pour suivre votre commande, rendez-vous dans votre <a href="{{path('account_order')}}" >compte</a>.
 {% endblock %}
