--- a/templates/register/index.html.twig
+++ b/templates/register/index.html.twig
@@ -2,5 +2,10 @@
 
 {% block contents %}
     <h1>inscription</h1>
+    {% if notification %}
+        <div class="alert alert-info">{{notification}}</div>
+        <hr>
+    {% endif %}
+
     {{ form(form) }}
 {% endblock %}
